syntax = "proto3";
option java_multiple_files = true;
package com.sample.example;

//import "google/api/annotations.proto";

message LengthRequest {
    string number = 1;
    int64 timeout = 2000;
}

message LengthResponse {
    int32 length = 1;
}

service RecurringLengthCalcService {
    rpc getLength(LengthRequest) returns (LengthResponse){
//        option (google.api.http) = {
//        post: "/v1/example/echo"
//        body: "*"
//        };
    };
}